# modules/servizi-digitali-rest-service/servizi-digitali-rest-service-api/src/main/java/it/servizidigitali/restservice/resource/v1_0/ChatbotResource.java
@@ -43,7 +43,7 @@ public interface ChatbotResource {
 		return FactoryHolder.factory.create();
 	}
 
-	public ChatbotAnswer getRispostaChatbot(
+	public ChatbotAnswer getChatbotMessaggioServizio(
 			String codiceFiscale, String codiceServizio, String amministrazione,
 			String nomeComune)
 		throws Exception;
